# ALVR-OpenXR-Engine

./: .gitignore
specification/registry/: xr.xml
src/: CMakeLists.txt
src/alxr_engine/: CMakeLists.txt  alxr_ctypes.h  alxr_engine.cpp  alxr_engine.h  common.h  d3d_common.h  decoder_thread.cpp  decoder_thread.h  decoderplugin_ffmpeg.cpp  decoderplugin_mediacodec.cpp  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_vulkan.cpp  input_thread.cpp  interaction_manager.h  interaction_profiles.h  logger.cpp  nal_utils.h  openxr_program.cpp  openxr_program.h  options.h  pch.h  visibility_masks.h  vk_context.cpp  vk_context.h  vrcft_proxy_server.h  xr_colorspaces.h  xr_context.h  xr_eigen.h  xrpaths.h
src/alxr_engine/alvr_common/: CMakeLists.txt  README.md  bindings.h  fec.cpp  fec.h  latency_collector.cpp  packet_types.h
src/alxr_engine/cuda/: d3d11cuda_interop.inl  d3d12cuda_interop.inl  vulkancuda_interop.inl
src/alxr_engine/d3d_shaders/common/: decodeFoveation.hlsl  sRGBLinearize.hlsl
src/alxr_engine/d3d_shaders/precompiled/SM5/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/multiview/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/vulkan_shaders/common/: sRGBLinearize.glsl
src/alxr_engine/vulkan_shaders/precompiled/: lobby_vert.spv  passthroughMask_frag.spv  videoStream_vert.spv
src/common/: xr_dependencies.h
src/loader/: CMakeLists.txt
src/scripts/: interaction_profile_processor.py
(+43 files in other folders)
